[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_umangsrivastav"
version = "0.0.1"
authors = [
  { name="Umang Srivastav", email="umang2213108@iitgoa.ac.in" },
]
description = "A small random string generation package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"